@@ -5,6 +5,7 @@ version 2.0-rc0 XX-Feb-2012
 		Sprite: fixed possible setColor and opacity
 		TileMap: Flipped tiles can be changed during runtime (issue #1264)
 		TileMap: Fixed a problem with multiple layers and multiple tile sets that could cause TMX maps to not load if rotation is used (issue #1302)
+. [NEW] Actions: Added ActionTargeted action. Useful to target other nodes from a sequence.
 . [NEW] Animation: Added new animation format that supports delays per frame and notifications per frame
 . [NEW] Director: When the stats are on, the number of GL draw calls per frame are displayed
 		Added support for main-thread director (Mac only. Needed for some editors)
